# LL-SynAutomate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  automate.cpp  automate.hpp
lib/: automate.cpp  automate.hpp  symbol.cpp  symbol.hpp
test/: main.cpp  testautomate.cpp  testautomate.hpp
